# securepass-analyzer

./: .gitignore  Cargo.toml  README.md  angular.json  arborescence.txt  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vercel.json
api/: analyze.rs
pkg/: securepass_analyzer_bg.wasm.d.ts
public/pkg/: securepass_analyzer_bg.wasm
src/: index.html  lib.rs  main.ts
src/app/: app.component.ts  app.config.ts  app.spec.ts  app.ts
src/environments/: environment.prod.ts  environment.ts
src/pkg/: README.md  package.json  securepass_analyzer.d.ts  securepass_analyzer.js
