[package]
name = "securepass-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pour gérer les requêtes Vercel
vercel_runtime = "1.1.0"
# Pour la sérialisation JSON (comme encoding/json en Go)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pour le calcul d'entropie
zxcvbn = "2.2.2"
